cabal-version:      2.4
name:               aoc2023
version:            0.0.1
author:             Eduard Eduardov
maintainer:         eduard.eduardov@tempo.io

executable Main
    main-is:          Main.hs
    other-modules:    Day1, Day2, Day3, Day4, Day5, Day6, Day7a, Day7b, Day8, Day9
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        regex-posix >= 0.96,
        parsec >= 3.1.16,
        containers >= 0.6.7,
        mtl >= 2.2.2
    hs-source-dirs:   src
    default-language: Haskell2010
